Fix double border at the bottom of timeline content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -856,7 +856,6 @@ Resume Timeline
 }
 
 .timeline-content::after{
-    border: 1px solid #eee;
     width: 100%;
     position: absolute;
     content: "";
